[package]
name = "vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.21.0"
anchor-spl = "0.21.0"
bytemuck = "1.4.0"
#rust_decimal = { git = "https://github.com/zetamarkets/rust-decimal.git", features = ["maths"] }
#jet = { git = "https://github.com/jet-lab/jet-v1" }
jet-proto-v1-cpi = { git = "https://github.com/jet-lab/jet-v1", branch = "cpi-library" }
uint = "=0.9.1"